# dynamical-stac

./: .pre-commit-config.yaml  CLAUDE.md  pyproject.toml
.github/workflows/: deploy-catalog-probes.yml  deploy-read-canary.yml  generate-and-upload.yml  test.yml  upload-stac-staging.yml  upload-stac.yml
plans/: 15_stac_prose_migration.md  1_address_pr_feedback.md  1_dynamical_stac.md  dynamical_stac.md
scripts/: catalog_probes.py  compat_matrix.py  generate  generate-and-upload.sh  read_canary.py
src/: __main__.py  catalog.py  cli.py  datasets.py  generate.py  models.py  upload.py
src/data/: ecmwf-aifs-single-forecast.json  ecmwf-ifs-ens-forecast-15-day-0-25-degree.json  noaa-gefs-analysis.json  noaa-gefs-forecast-35-day.json  noaa-gfs-analysis.json  noaa-gfs-forecast.json  noaa-hrrr-analysis.json  noaa-hrrr-forecast-48-hour.json  noaa-mrms-conus-analysis-hourly.json
src/descriptions/: ecmwf-aifs-single-forecast.md  ecmwf-ifs-ens-forecast-15-day-0-25-degree.md  noaa-gefs-analysis.md  noaa-gefs-forecast-35-day.md  noaa-gfs-analysis.md  noaa-gfs-forecast.md  noaa-hrrr-analysis.md  noaa-hrrr-forecast-48-hour.md  noaa-mrms-conus-analysis-hourly.md
src/prose/datasets/: dwd-icon-eu-forecast-5-day.md  ecmwf-aifs-ens-forecast.md  ecmwf-aifs-single-forecast.md  ecmwf-ifs-ens-forecast-15-day-0-25-degree.md  nasa-imerg-analysis-early.md  nasa-imerg-analysis-late.md  noaa-gefs-analysis.md  noaa-gefs-forecast-10-day-spatial-dev.md  noaa-gefs-forecast-35-day.md  noaa-gfs-analysis.md  noaa-gfs-forecast.md  noaa-hrrr-analysis.md  noaa-hrrr-forecast-48-hour-virtual.md  noaa-hrrr-forecast-48-hour.md  noaa-mrms-conus-analysis-hourly.md
src/prose/models/: ecmwf-aifs-single.md  ecmwf-ifs-ens.md  noaa-gefs.md  noaa-gfs.md  noaa-hrrr.md  noaa-mrms.md
stac/: catalog.json
stac/dwd-icon-eu-forecast-5-day/: collection.json
stac/ecmwf-aifs-ens-forecast/: collection.json
stac/ecmwf-aifs-single-forecast/: collection.json
stac/ecmwf-ifs-ens-forecast-15-day-0-25-degree/: collection.json
stac/noaa-gefs-analysis/: collection.json
stac/noaa-gefs-forecast-35-day/: collection.json
stac/noaa-gfs-analysis/: collection.json
stac/noaa-gfs-forecast/: collection.json
stac/noaa-hrrr-analysis/: collection.json
stac/noaa-hrrr-forecast-48-hour/: collection.json
stac/noaa-hrrr-forecast-48-hour-virtual/: collection.json
stac/noaa-mrms-conus-analysis-hourly/: collection.json
tests/: conftest.py  test_catalog_examples.py  test_catalog_probes.py  test_catalog_read.py  test_chunking.py  test_cli.py  test_from_dataset.py  test_models.py  test_released_catalog_read.py  test_stac_browse.py  test_stac_check.py  test_stac_drift.py  test_stac_link_graph.py  test_stac_schema_validation.py  test_staging_filter.py  test_upload.py  test_versions.py  test_vertical_coords_cf.py
