[project]
name = "dynamical-stac"
version = "0.1.0"
description = "STAC catalog generation for dynamical.org"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.91",
    "icechunk>=0.2.0",
    "pandas>=2.2.0",
    "pystac[validation]>=1.10.0",
    "xarray>=2024.10.0",
    "zarr>=3.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
integration = [
    "pystac-client>=0.8.0",
    "dynamical-catalog",
]

[tool.pytest.ini_options]
markers = [
    "integration: slow network-dependent integration tests (reads from public R2 buckets)",
]

[tool.uv.sources]
# Use the icechunk-2 branch until it's merged and a new release is published on PyPI.
# After merge, switch to a pinned PyPI version (e.g. dynamical-catalog>=0.4.0) and drop this source.
dynamical-catalog = { git = "https://github.com/dynamical-org/dynamical-catalog", branch = "icechunk-2" }
